Resolved table layout issue.

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -32,8 +32,7 @@ body {
 
 #app-navigation {
     border: solid grey 1px;
-    height: 80vh;
-    /* height: 100%; */
+    height: 90vh;
     /* max-height: 80vh; */
 }
 
@@ -69,12 +68,13 @@ body {
     background: rgb(237, 237, 237);
     /* height: 98%; */
     /* max-height: 80vh; */
-    height: 78vh;
+    /* height: 78vh; */
+    height: 100%;
     border-left: solid grey 1px;
     border-right: solid grey 1px;
     border-bottom: solid grey 1px;
-    margin-left: 24px;
-    margin-right: 24px;
+    margin-left: 16px;
+    margin-right: 16px;
     min-width: 1000px;
 }
 
@@ -129,11 +129,7 @@ body {
 }
 
 #form-table {
-    /* position: relative;        TRIED ALL THESE THINGS
-    display: flex;                HOW DO I GET THIS TABLE TO AUTO-GROW?
-    flex-direction: column; */
-    /* height: 400px; */
-    height: 100%;
+    height: 50vh;
     border: solid grey 1px;
 }
 
@@ -146,12 +142,6 @@ body {
     padding: 0px;
 }
 
-/* .MuiTableCell-root {
-    background-color: green;
-    padding: 0px;
-    margin: 0px;
-  } */
-
-  #test {
-    max-height: 80vh;
-  }
+.test {
+    height: 45px;
+}
